adicionado icones e checkage pos desligar

--- a/i18n.yaml
+++ b/i18n.yaml
@@ -5,3 +5,10 @@ title_restart: "Reiniciar"
 title_off_in: "Desligar em"
 title_turn_off_opened: "Desligar ao abrir, após (segundos)"
 title_turn_off_closed: "Desligar ao fechar, após (segundos)"
+title_turn_on_again: "Entre On e OFF: verificar por (segundos)"
+title_turn_on_again_add: "Entre On e OFF: Segundos a serem incrementados"
+title_turn_on_again_maxadd: "Entre On e OFF: teto a ser incrementado relativo ao tempo 'Desligar ao fechar' (0.5 = 50%, 2 = 200%)"
+title_again_on_counter: "Contador interno de vezes que ligou logo em seguida"
+title_manual_open: "Disparar evento de 'abrir'"
+title_manual_close: "Disparar evento de 'fechar'"
+title_reset_onoff_counter: "Zerar contador interno de vezes que ligou logo em seguida"
