--- a/esphome_timed_door_light.yaml
+++ b/esphome_timed_door_light.yaml
@@ -5,7 +5,6 @@ esphome:
     priority: 250.0
     then:
       lambda: |-
-        id(github).publish_state("");
         id(again_on_counter).publish_state( std::to_string(id(my__increase_off_counter)).c_str());
 
         if (id(door).state) {
@@ -22,7 +21,6 @@ logger:
 
 # Enable Home Assistant API
 api:
-  port: 6053
   encryption:
     key: ${apikey}
   reboot_timeout: 0s
@@ -46,11 +44,20 @@ wifi:
 
 #captive_portal:
 
+sun:
+  latitude: ${default_latitude}
+  longitude: ${default_longitude}
+  id: sun_sun
+
 time:
+  - platform: homeassistant
+    id: ha_time
+
   - platform: sntp
     id: sntp_time
-    timezone: "America/Sao_Paulo"
-    servers: ["a.st1.ntp.br", "b.st1.ntp.br", "c.st1.ntp.br"]
+    timezone: ${default_timezone}
+    servers: ["time.cloudflare.com", "time.google.com", "0.pool.ntp.org"]
+
     on_time:
       - seconds: 0
         minutes: 0
@@ -135,11 +142,11 @@ globals:
 
 button:
   - platform: restart
-    name: ${title_restart}
+    name: "9W. ${title_restart}"
     icon: "mdi:icon7-off"
 
   - platform: template
-    name: ${title_reset_onoff_counter}
+    name: "1F. ${title_reset_onoff_counter}"
     icon: "mdi:icon7-terminal"
     on_press:
       then:
@@ -148,14 +155,14 @@ button:
           id(again_on_counter).publish_state("0");
 
   - platform: template
-    name: ${title_manual_open}
+    name: "9W. ${title_manual_open}"
     icon: "mdi:icon7-terminal"
     on_press:
       then:
         - lambda: id(status_change)->execute(1);
 
   - platform: template
-    name: ${title_manual_close}
+    name: "9V. ${title_manual_close}"
     icon: "mdi:icon7-terminal"
     on_press:
       then:
@@ -164,7 +171,7 @@ button:
 number:
   - platform: template
     id: minseconds
-    name: ${title_turn_off_closed}
+    name: "2B. ${title_turn_off_closed}"
     icon: "mdi:icon7-time"
     min_value: 10
     max_value: 1800
@@ -175,7 +182,7 @@ number:
 
   - platform: template
     id: maxseconds
-    name: ${title_turn_off_opened}
+    name: "2A. ${title_turn_off_opened}"
     icon: "mdi:icon7-time"
     min_value: 30
     max_value: 3600
@@ -186,7 +193,7 @@ number:
 
   - platform: template
     id: between_onoff_check
-    name: ${title_turn_on_again}
+    name: "1D. ${title_turn_on_again}"
     icon: "mdi:icon7-time"
     min_value: 5
     max_value: 60
@@ -197,7 +204,7 @@ number:
 
   - platform: template
     id: between_onoff_add
-    name: ${title_turn_on_again_add}
+    name: "3A. ${title_turn_on_again_add}"
     icon: "mdi:icon7-time"
     min_value: 10
     max_value: 60
@@ -208,17 +215,56 @@ number:
 
   - platform: template
     id: between_onoff_maxadd
-    name: ${title_turn_on_again_maxadd}
+    name: "3B. ${title_turn_on_again_maxadd}"
     min_value: 0.1
     max_value: 7
     step: 0.1
-    initial_value: 1
+    initial_value: 2
     optimistic: true
     restore_value: true
 
+  - platform: template
+    name: "4A. ${title_just_light_up_the_night}"
+    id: nightonly
+    icon: "mdi:icon7-time"
+    min_value: 0
+    max_value: 120
+    step: 1
+    initial_value: 0
+    optimistic: true
+    restore_value: true
+
+  - platform: template
+    id: latitude_val
+    name: "4B. ${title_latitude}"
+    min_value: -90
+    max_value: 90
+    step: 0.0001
+    initial_value: 21.9961
+    optimistic: true
+    restore_value: true
+    icon: "mdi:icon7-globe"
+    on_value:
+      then:
+        - script.execute: sun_position_change
+
+  - platform: template
+    id: longitude_val
+    name: "4C. ${title_longitude}"
+    icon: "mdi:icon7-globe"
+    min_value: -90
+    max_value: 90
+    step: 0.0001
+    initial_value: 47.4258
+    optimistic: true
+    restore_value: true
+    on_value:
+      then:
+        - script.execute: sun_position_change
+
 switch:
   - platform: gpio
-    name: "${title_light}"
+    name: "1B. ${title_light}"
     id: relay
     icon: "mdi:icon7-lightbulb"
     pin:
@@ -252,41 +298,86 @@ switch:
         id(my__off_counter) = 0;
 
 script:
-  id: status_change
-  parameters:
-    x: int
-  then:
-    lambda: |-
-      // is open
-      if (x){
-        id(my__counter) = id(maxseconds).state;
-        id(relay).turn_on();
+  - id: sun_position_change
+    then:
+      lambda: |-
+        return;
 
-      // is cloused
-      }else{
-        int increase = abs(
-          id(between_onoff_add).state *
+  - id: status_change
+    parameters:
+      x: int
+    then:
+      if:
+        condition:
+          not:
+            and:
+              - lambda: "return x != 0;"
+              - lambda: |-
+                  if (id(nightonly).state <= 0){
+                    return false;
+                  }
 
-          // increase seconds to OFF state
-          (id(my__increase_off_counter) > 1 ? id(my__increase_off_counter) - 1 : 0 )
-        );
+                  ESPTime nowtime = id(ha_time).now();
 
-        int max_addseconds  = abs( ((1.0+(float)id(between_onoff_maxadd).state)) * ((float)id(minseconds).state) );
+                  if (!nowtime.is_valid()){
+                    nowtime = id(sntp_time).now();
+                  }
 
-        ESP_LOGI("main", "Contador incremental limitado a '%d' segundo(s).", max_addseconds);
+                  if (!nowtime.is_valid()){
+                    return {"..."};
+                  }
 
-        id(my__counter) = id(minseconds).state + increase;
+                  // get only current hour and minute
+                  char buffer[26];
+                  struct tm now = nowtime.to_c_tm();
+                  strftime(buffer, sizeof(buffer), "%d/%m/%Y, %H:%M", &now);
 
-        if (id(my__counter) > max_addseconds){
-          id(my__counter) = max_addseconds;
-        }
+                  puts(buffer);
 
-        if (id(my__counter) > id(maxseconds).state){
-          id(my__counter) = id(maxseconds).state;
-        }
+                  // convert only current hour and minute TO time value
+                  struct tm only_time;
+                  strptime(buffer, "%H:%M", &only_time);
+                  time_t newnow = mktime(&now);
 
-        ESP_LOGI("main", "Iniciando timer em '%d' segundos.", id(my__counter));
-      }
+                  return (
+                    // a partir de minutos antes do por do sol
+                    ( newnow > ( id(sun_sun).sunset(627)->timestamp - (id(nightonly).state*60) ) ) ||
+                    // até minutos depois do nascer do sol
+                    ( newnow < ( id(sun_sun).sunrise(627)->timestamp + (id(nightonly).state*60) ) )
+                  );
+
+        then:
+          lambda: |-
+            // is open
+            if (x){
+              id(my__counter) = id(maxseconds).state;
+              id(relay).turn_on();
+
+            // is cloused
+            }else{
+              int increase = abs(
+                id(between_onoff_add).state *
+
+                // increase seconds to OFF state
+                (id(my__increase_off_counter) > 1 ? id(my__increase_off_counter) - 1 : 0 )
+              );
+
+              int max_addseconds  = abs( ((1.0+((float)id(between_onoff_maxadd).state))) * ((float)id(minseconds).state) );
+
+              ESP_LOGI("main", "Contador incremental limitado a '%d' segundo(s).", max_addseconds);
+
+              id(my__counter) = id(minseconds).state + increase;
+
+              if (id(my__counter) > max_addseconds){
+                id(my__counter) = max_addseconds;
+              }
+
+              if (id(my__counter) > id(maxseconds).state){
+                id(my__counter) = id(maxseconds).state;
+              }
+
+              ESP_LOGI("main", "Iniciando timer em '%d' segundos.", id(my__counter));
+            }
 
 binary_sensor:
   - platform: gpio
@@ -295,7 +386,7 @@ binary_sensor:
       mode:
         input: true
         pulldown: true
-    name: ${title_dooropened}
+    name: "1A. ${title_dooropened}"
     id: door
     filters:
       - delayed_on_off: 200ms
@@ -318,24 +409,55 @@ binary_sensor:
         }
 
 text_sensor:
+  - platform: sun
+    name: "4D. ${title_sunset_time}"
+    id: "sunset_time"
+    type: sunset
+    format: "%H:%M"
+
+  - platform: sun
+    name: "4E. ${title_sunrise_time}"
+    id: "sunrise_time"
+    type: sunrise
+    format: "%H:%M"
+
   - platform: template
     id: remainingtime
     icon: "mdi:icon7-clock-fill"
-    name: ${title_off_in}
+    name: "1C. ${title_off_in}"
   #    update_interval: 1s
 
   - platform: template
     id: again_on_counter
-    name: ${title_again_on_counter}
+    name: "1E. ${title_again_on_counter}"
     icon: "mdi:icon7-calculator"
   #    update_interval: 60s
 
   - platform: template
-    name: "Github"
+    name: "9X. Date and Time"
+    id: show_time
+    lambda: |-
+      ESPTime nowtime = id(ha_time).now();
+
+      if (!nowtime.is_valid()){
+        nowtime = id(sntp_time).now();
+      }
+
+      if (!nowtime.is_valid()){
+        return {"..."};
+      }
+
+      char str[26];
+      struct tm now = nowtime.to_c_tm();
+      strftime(str, sizeof(str), "%H:%M, %d/%m/%Y", &now);
+      return  { str };
+
+  - platform: template
+    name: "9Z. Github"
     icon: "mdi:icon-github"
     id: github
-    filters:
-      lambda: return {"JeanCarloEM/esphome_timed_door_light"};
+    lambda: return {"JeanCarloEM/esphome_timed_door_light"};
+    update_interval: 3600s
 
   - platform: version
-    name: "ESPHome Version"
+    name: "9Y. ESPHome Version"
