--- a/i18n.yaml
+++ b/i18n.yaml
@@ -12,9 +12,11 @@ title_again_on_counter: "Contador interno de vezes que ligou logo em seguida"
 title_manual_open: "Disparar evento de 'abrir'"
 title_manual_close: "Disparar evento de 'fechar'"
 title_reset_onoff_counter: "Zerar contador interno de vezes que ligou logo em seguida"
-title_just_light_up_the_night: "Iluminar apenas a noite"
+title_just_light_up_the_night: "Iluminar apenas a noite (minutos de margem, 0 = desabilitado)"
 title_latitude: "Latitude"
 title_longitude: "Longitude"
 title_timezone: "Timezone"
 title_sunset_time: "Horário do pôr do sol"
 title_sunrise_time: "Horário do nascer do sol"
+title_brightness_sensor: "Luminosidade"
+title_brightness_below: "Ligar somente com limunisidade abaixo de (0-100, 0 = desabilitado)"
