--- a/example.yaml
+++ b/example.yaml
@@ -3,7 +3,9 @@ substitutions:
   devicename: "despensa"
   capitalized_name: "Despensa"
   devicecomment: "Luz automática da Despensa"
-  board: d1_mini
+  board: esp12e
+  i2c_sda_pin: "GPIO14"
+  i2c_scl_pin: "GPIO12"
   pin_rele: "GPIO5"
   pin_button: "GPIO4"
   pin_sensor: "GPIO16"
@@ -11,8 +13,9 @@ substitutions:
   otakey: !secret timed_door_light__otakey
   wifi: "gz"
   wifipass: !secret timed_door_light__wifipass
-  default_latitude: 21.5946°
-  default_longitude: 47.2533°
+  default_latitude: "-22.01"
+  default_longitude: "-47.42"
   default_timezone: "America/Sao_Paulo"
+  brightness_pin: GPIO17
 
 <<: !include esphome_timed_door_light.yaml
