--- a/i18n.yaml
+++ b/i18n.yaml
@@ -20,3 +20,5 @@ title_sunset_time: "Horário do pôr do sol"
 title_sunrise_time: "Horário do nascer do sol"
 title_brightness_sensor: "Luminosidade"
 title_brightness_below: "Ligar somente com limunisidade abaixo de (0-100, 0 = desabilitado)"
+title_factory_reset: "Restaurar de Fábrica"
+title_safe_mode: "Reiniciar em Modo Seguro"
